--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ endorsed.classpath=
 excludes=
 file.reference.bcrypt-0.9.0.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\bcrypt-0.9.0.jar
 file.reference.bytes-1.5.0.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\bytes-1.5.0.jar
+file.reference.com.lowagie.text-2.1.7.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\JasperReports\\com.lowagie.text-2.1.7.jar
 file.reference.commons-collections4-4.4.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\JasperReports\\commons-collections4-4.4.jar
 file.reference.commons-digester-2.1.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\JasperReports\\commons-digester-2.1.jar
 file.reference.commons-lang3-3.12.0.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\JasperReports\\commons-lang3-3.12.0.jar
@@ -52,7 +53,6 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.LGoodDatePicker-11.2.1.jar}:\
-    ${file.reference.ojdbc11.jar}:\
     ${file.reference.commons-collections4-4.4.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.groovy-3.0.8.jar}:\
@@ -60,7 +60,9 @@ javac.classpath=\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-lang3-3.12.0.jar}:\
     ${file.reference.bcrypt-0.9.0.jar}:\
-    ${file.reference.bytes-1.5.0.jar}
+    ${file.reference.bytes-1.5.0.jar}:\
+    ${file.reference.ojdbc11.jar}:\
+    ${file.reference.com.lowagie.text-2.1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
