--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,7 @@ file.reference.commons-logging-1.2.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis 
 file.reference.groovy-3.0.8.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\JasperReports\\groovy-3.0.8.jar
 file.reference.jasperreports-6.18.1.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\JasperReports\\jasperreports-6.18.1.jar
 file.reference.LGoodDatePicker-11.2.1.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\LGoodDatePicker-11.2.1.jar
-file.reference.ojdbc11.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\ojdbc11.jar
+file.reference.ojdbc8.jar=D:\\Kuliah\\Baru\\211\\Pemrograman Basis Data\\Netbeans\\Library\\ojdbc8.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -61,8 +61,8 @@ javac.classpath=\
     ${file.reference.commons-lang3-3.12.0.jar}:\
     ${file.reference.bcrypt-0.9.0.jar}:\
     ${file.reference.bytes-1.5.0.jar}:\
-    ${file.reference.ojdbc11.jar}:\
-    ${file.reference.com.lowagie.text-2.1.7.jar}
+    ${file.reference.com.lowagie.text-2.1.7.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
